--- a/src/task1/TelegramStyles.module.css
+++ b/src/task1/TelegramStyles.module.css
@@ -1,10 +1,11 @@
-.wrapper{
-      background-color: skyblue;
-    width: 98vw;
-    height: 98vw;
-}
+/*.wrapper{*/
+/*      !*background-color: skyblue;*!*/
+/*    width: 98vw;*/
+/*    height: 98vw;*/
+/*}*/
 
 .telega{
+    text-align: center;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     padding: 5px;
     border-radius: 20px;
@@ -34,3 +35,5 @@ table td {
     width: 100px;
 
 }
+
+
