--- a/src/App.css
+++ b/src/App.css
@@ -14,4 +14,20 @@
     display: flex;
 }
 
+.SelectStyles{
+    position: absolute;
+    left: 150px;
+    top:100px
+}
+
+.RadioStyles{
+    border:solid black 2px;
+    padding: 10px;
+    background-color: yellow;
+    position: absolute;
+    left: 150px;
+    top:150px
+}
+
+
 
