--- a/src/App.css
+++ b/src/App.css
@@ -29,5 +29,36 @@
     top:150px
 }
 
+.ArrayState{
+    height: 200px;
+    width: 230px;
+    border: black solid 2px;
+    border-radius: 15px;
+    position: absolute;
+    left: 150px;
+    top:400px;
+    background-color: white;
+}
+
+.th1{
+    position: relative;
+    top:00px;
+    left: -80px;
+}
 
 
+.th2{
+    position: relative;
+    top:00px;
+    left: -86px;
+}
+
+.buttons{
+    margin-left: 20px;
+    margin-top: 20px;
+}
+
+td{
+    position: relative;
+    left: -30px;
+}
